--- a/notebook/create_datasets.ipynb
+++ b/notebook/create_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "e004081c",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 30,
    "id": "40e3c8f1",
    "metadata": {},
    "outputs": [],
@@ -212,40 +212,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 31,
    "id": "05a75b46",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found cached dataset parquet (/home/ran/.cache/huggingface/datasets/ranWang___parquet/ranWang--test_paper_textClassifier-c89de31317ad5101/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "375393a5d6684b6e9fcd1709e4bf53e5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 在这之前的时间，新增了一列\"file_path\"\n",
-    "datadict = datasets.load_dataset(\"ranWang/test_paper_textClassifier\")"
+    "# datadict = datasets.load_dataset(\"ranWang/test_paper_textClassifier\")\n",
+    "datadict = datasets.load_from_disk(\"./classification_datasets\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 32,
    "id": "2104fd3a",
    "metadata": {},
    "outputs": [],
@@ -255,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 33,
    "id": "51929741",
    "metadata": {},
    "outputs": [
@@ -264,11 +243,11 @@
       "text/plain": [
        "Dataset({\n",
        "    features: ['text', 'label', 'file_path'],\n",
-       "    num_rows: 9536\n",
+       "    num_rows: 13579\n",
        "})"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,17 +258,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 34,
    "id": "d4dfa9a6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# \n",
     "all_file_name = {row[\"file_path\"].split(\"/\")[-1] for row in train_dataset}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 35,
    "id": "b095d989",
    "metadata": {},
    "outputs": [
@@ -297,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████| 8356/8356 [01:30<00:00, 92.40it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████| 262/262 [00:00<00:00, 1419.69it/s]\n"
      ]
     }
    ],
@@ -329,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 37,
    "id": "34e7e0af",
    "metadata": {},
    "outputs": [
@@ -337,7 +317,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2471/2471 [01:08<00:00, 36.06it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████| 149/149 [00:00<00:00, 168.68it/s]\n"
      ]
     }
    ],
@@ -365,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 38,
    "id": "049e8d67",
    "metadata": {},
    "outputs": [],
@@ -375,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 39,
    "id": "dde5ada5",
    "metadata": {},
    "outputs": [
@@ -384,11 +364,11 @@
       "text/plain": [
        "Dataset({\n",
        "    features: ['text', 'label', 'file_path'],\n",
-       "    num_rows: 13247\n",
+       "    num_rows: 13621\n",
        "})"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 40,
    "id": "dd5a18ab",
    "metadata": {},
    "outputs": [],
@@ -409,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 41,
    "id": "33dd291f",
    "metadata": {},
    "outputs": [
@@ -423,12 +403,12 @@
        "    })\n",
        "    train: Dataset({\n",
        "        features: ['text', 'label', 'file_path'],\n",
-       "        num_rows: 13247\n",
+       "        num_rows: 13621\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 44,
    "id": "cc61d5f8",
    "metadata": {},
    "outputs": [
@@ -465,7 +445,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Saving the dataset (0/1 shards):   0%|          | 0/13158 [00:00<?, ? examples/s]"
+       "Saving the dataset (0/1 shards):   0%|          | 0/13621 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -473,13 +453,13 @@
     }
    ],
    "source": [
-    "datadict.save_to_disk(\"./new_classification_datasets\")"
+    "datadict.save_to_disk(\"./classification_datasets\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3157beb6",
+   "id": "33c4b196",
    "metadata": {},
    "outputs": [],
    "source": []
